--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "daisyui": "^5.0.50",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-i18next": "^16.0.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
